[WebView _touchEventRegions] needs to take the web lock https://bugs.webkit.org/show_bug.cgi?id=223266

Reviewed by Simon Fraser.

Clicking anything in UIWebView test app in debug build hits thread assert immediately.

* WebView/WebView.mm:
(-[WebView _touchEventRegions]):


Canonical link: https://commits.webkit.org/235353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274499 268f45cc-cd09-0410-ab3c-d52691b4dbfc